# nRF-Connect-SDK-Fundamentals

./: README.md
fund_less2_exer1/: CMakeLists.txt
fund_less2_exer1/src/: main.c
fund_less2_exer2/: CMakeLists.txt
fund_less2_exer2/src/: main.c
fund_less3_exer1/: README.md
fund_less3_exer1/src/: main.c
fund_less3_exer2/: README.md  kconfig  nrf52840dk_nrf52840.overlay  prj.conf
fund_less3_exer2/src/: main.c
fund_less4_exer1/: CMakeLists.txt
fund_less4_exer1/src/: main.c
fund_less4_exer2/: CMakeLists.txt
fund_less4_exer2/src/: main.c
fund_less4_exer3/: CMakeLists.txt  prj.conf
fund_less5_exer1/: CMakeLists.txt  prj.conf
fund_less5_exer1/src/: main.c
fund_less6_exer1/: README.md  nrf52840dk_nrf52840.overlay  prj.conf
fund_less6_exer1/src/: main.c
fund_less6_exer1_exer2/: README.md
fund_less6_exer1_exer2/fund_less6_exer1/: CMakeLists.txt
fund_less6_exer1_exer2/fund_less6_exer1/src/: main.c
fund_less6_exer1_exer2/fund_less6_exer2/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
fund_less6_exer1_exer2/fund_less6_exer2/src/: main.c
fund_less6_exer2/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
fund_less6_exer2/src/: main.c
fund_less7_exer1/src/: main.c
fund_less7_exer2/: prj.conf
fund_less7_exer2/src/: main.c
fund_less7_exer3/src/: main.c
fund_less8_exer1/: CMakeLists.txt
fund_less8_exer1/src/: main.c
fund_less8_exer2/src/: main.c
